* hide buttons that are turned off * ref links open in new window * different icon for press release * fixed truncation problem for raw refs * autopopulate accessdate

--- a/static/styles.css
+++ b/static/styles.css
@@ -143,6 +143,7 @@ div#proveit div.expanded {
 	font-size: x-small;
 	padding: 5px 0;
 	display: none;
+	width: auto;
 	}
 		
 	div#proveit div.expanded p {
